Cambio de dominio en meta

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+ <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
@@ -10,27 +10,29 @@
   <meta name="keywords" content="Full Stack Developer, Web Developer, React, Node.js, Next.js, JavaScript, TypeScript, Portfolio, Luis Daniel Villalpando" />
   <meta name="author" content="Luis Daniel Villalpando Hurtado" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://tudominio.com" />
+  <link rel="canonical" href="https://personal-website-luisdanielvillalpand.netlify.app" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://tudominio.com" />
+  <meta property="og:url" content="https://personal-website-luisdanielvillalpand.netlify.app" />
   <meta property="og:title" content="Luis Daniel Villalpando | Full Stack Web Developer" />
   <meta property="og:description" content="Full Stack Web Developer with 3+ years of experience building scalable web applications. Check out my portfolio!" />
-  <meta property="og:image" content="https://tudominio.com/src/images/preview.jpg" />
+  <meta property="og:image" content="https://personal-website-luisdanielvillalpand.netlify.app/src/images/preview.jpg" />
   <meta property="og:locale" content="en_US" />
   
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://tudominio.com" />
+  <meta name="twitter:url" content="https://personal-website-luisdanielvillalpand.netlify.app" />
   <meta name="twitter:title" content="Luis Daniel Villalpando | Full Stack Web Developer" />
   <meta name="twitter:description" content="Full Stack Web Developer with 3+ years of experience. Portfolio & Projects." />
-  <meta name="twitter:image" content="https://tudominio.com/src/images/preview.jpg" />
+  <meta name="twitter:image" content="https://personal-website-luisdanielvillalpand.netlify.app/src/images/preview.jpg" />
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="src/images/favicon_io/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="src/images/favicon_io/favicon-16x16.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="src/images/favicon_io/apple-touch-icon.png" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
   
   <!-- Theme Color -->
   <meta name="theme-color" content="#ffc107" />
