--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://personal-website-luisdanielvillalpand.netlify.app" />
   <meta property="og:title" content="Luis Daniel Villalpando | Full Stack Web Developer" />
   <meta property="og:description" content="Full Stack Web Developer with 3+ years of experience building scalable web applications. Check out my portfolio!" />
-  <meta property="og:image" content="https://personal-website-luisdanielvillalpand.netlify.app/src/images/preview.png" />
+  <meta property="og:image" content="https://personal-website-luisdanielvillalpand.netlify.app/preview.png" />
   <meta property="og:locale" content="en_US" />
   
   <!-- Twitter Card -->
@@ -25,7 +25,7 @@
   <meta name="twitter:url" content="https://personal-website-luisdanielvillalpand.netlify.app" />
   <meta name="twitter:title" content="Luis Daniel Villalpando | Full Stack Web Developer" />
   <meta name="twitter:description" content="Full Stack Web Developer with 3+ years of experience. Portfolio & Projects." />
-  <meta name="twitter:image" content="https://personal-website-luisdanielvillalpand.netlify.app/src/images/preview.png" />
+  <meta name="twitter:image" content="https://personal-website-luisdanielvillalpand.netlify.app/preview.png" />
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
