--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <meta name="author" content="Luis Daniel Villalpando Hurtado" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://personal-website-luisdanielvillalpand.netlify.app" />
+
+  <!-- Después de og:image, agrega: -->
+<meta property="og:image:secure_url" content="https://personal-website-luisdanielvillalpand.netlify.app/preview.png" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="Luis Daniel Villalpando - Full Stack Web Developer Portfolio" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
