--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="canonical" href="https://personal-website-luisdanielvillalpand.netlify.app" />
 
   <!-- Después de og:image, agrega: -->
-<meta property="og:image:secure_url" content="https://personal-website-luisdanielvillalpand.netlify.app/preview.png" />
+<meta property="og:image:secure_url" content="https://personal-website-luisdanielvillalpand.netlify.app/public/preview.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
@@ -24,7 +24,7 @@
   <meta property="og:url" content="https://personal-website-luisdanielvillalpand.netlify.app" />
   <meta property="og:title" content="Luis Daniel Villalpando | Full Stack Web Developer" />
   <meta property="og:description" content="Full Stack Web Developer with 3+ years of experience building scalable web applications. Check out my portfolio!" />
-  <meta property="og:image" content="https://personal-website-luisdanielvillalpand.netlify.app/preview.png" />
+  <meta property="og:image" content="https://personal-website-luisdanielvillalpand.netlify.app/public/preview.png" />
   <meta property="og:locale" content="en_US" />
   
   <!-- Twitter Card -->
@@ -32,7 +32,7 @@
   <meta name="twitter:url" content="https://personal-website-luisdanielvillalpand.netlify.app" />
   <meta name="twitter:title" content="Luis Daniel Villalpando | Full Stack Web Developer" />
   <meta name="twitter:description" content="Full Stack Web Developer with 3+ years of experience. Portfolio & Projects." />
-  <meta name="twitter:image" content="https://personal-website-luisdanielvillalpand.netlify.app/preview.png" />
+  <meta name="twitter:image" content="https://personal-website-luisdanielvillalpand.netlify.app/public/preview.png" />
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
