Se cambio el tamano de la letra

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <h2 class="text-center mb-4 display-5 fw-bold text-warning">
         <i class="bi bi-code-slash me-2"></i>Technological Stack
       </h2>
-      <div class="contenedor-bash bg-black scroll-animate">
+      <div class="contenedor-bash bg-black scroll-animate fw-semibold fs-5">
         <div class="bash-header">
           <div class="bash-header-botones">
             <span class="bola roja"></span>
